hphp/test/quick/ctor_param_promotion_generic.php.expectf

Fatal error: Generic type parameters are not allowed on constructors. Consider adding a type parameter to the class in %s on line 4
